alignment fixes

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -4,9 +4,12 @@
 
 .header-bg {
   /* background: linear-gradient(175deg, #3e1468b6 0%, #350a5f 100%); */
-  background: linear-gradient(175deg, #524899ef 0%, #453e7a 100%);
+  background: linear-gradient(180deg, #524899ef 0%, #3b346d 100%);
   /* background: bottom right url("../assets/man-1.svg") no-repeat; */
 }
 
+.skin-color {
+  fill: #a0616a;
+}
 /* #3c366b */
 @tailwind utilities;
